# ChangeLog for dev-java/eclipse-ecj
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/eclipse-ecj/ChangeLog,v 1.34 2008/01/24 17:59:38 nixnut Exp $

  24 Jan 2008; nixnut <nixnut@gentoo.org> eclipse-ecj-3.3.0-r2.ebuild:
  Stable on ppc wrt bug 204484

  23 Jan 2008; Raúl Porcel <armin76@gentoo.org>
  eclipse-ecj-3.3.0-r2.ebuild:
  Re-add ~ia64 wrt #204484

  23 Jan 2008; Christian Faulhammer <opfer@gentoo.org>
  eclipse-ecj-3.3.0-r2.ebuild:
  stable x86, bug 204484

*eclipse-ecj-3.3.0-r2 (23 Jan 2008)

  23 Jan 2008; Vlastimil Babka <caster@gentoo.org>
  +eclipse-ecj-3.3.0-r2.ebuild:
  Revbump to inherit proper eclass, fixed bug #207000.

  06 Jan 2008; Vlastimil Babka <caster@gentoo.org>
  -files/compiler-settings-3.1, -eclipse-ecj-3.1-r13.ebuild:
  Removing ecj-3.1 - old, and does not work correctly with 1.6 JDK and ant 1.7.0.

  05 Jan 2008; Petteri Räty <betelgeuse@gentoo.org>
  -eclipse-ecj-3.3.0.ebuild:
  Delete old revision.

  01 Dec 2007; Markus Rothe <corsair@gentoo.org>
  eclipse-ecj-3.3.0-r1.ebuild:
  Stable on ppc64

  27 Oct 2007; Krzysiek Pawlik <nelchael@gentoo.org>
  eclipse-ecj-3.3.0-r1.ebuild:
  Stable on ppc.

  17 Oct 2007; Markus Rothe <corsair@gentoo.org>
  eclipse-ecj-3.3.0-r1.ebuild:
  Added ~ppc64; bug #191729

  12 Oct 2007; Roy Marples <uberlord@gentoo.org> eclipse-ecj-3.3.0.ebuild,
  eclipse-ecj-3.3.0-r1.ebuild:
  Added ~x86-fbsd keyword back - don't drop it again! #191729

  12 Oct 2007; Christian Faulhammer <opfer@gentoo.org>
  eclipse-ecj-3.3.0-r1.ebuild:
  stable x86, security bug 195571

  12 Oct 2007; William L. Thomson Jr. <wltjr@gentoo.org>
  eclipse-ecj-3.1-r13.ebuild, eclipse-ecj-3.2.ebuild,
  eclipse-ecj-3.2.2.ebuild, eclipse-ecj-3.3.0.ebuild,
  eclipse-ecj-3.3.0-r1.ebuild:
  QA fixed copyright, added quotes.

  12 Oct 2007; William L. Thomson Jr. <wltjr@gentoo.org>
  eclipse-ecj-3.3.0-r1.ebuild:
  amd64 stable, bug #195571.

*eclipse-ecj-3.3.0-r1 (07 Sep 2007)
