@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/eclipse-ecj/eclipse-ecj-3.3.0-r2.ebuild,v 1.4 2008/01/24 17:59:38 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/eclipse-ecj/eclipse-ecj-3.3.0-r2.ebuild,v 1.5 2008/02/05 10:03:01 corsair Exp $
 
 inherit eutils java-pkg-2
 
@@ -13,7 +13,7 @@ HOMEPAGE="http://www.eclipse.org/"
 SRC_URI="http://download.eclipse.org/eclipse/downloads/drops/${DMF/.0}/${MY_PN}src.zip"
 
 LICENSE="EPL-1.0"
-KEYWORDS="~amd64 ~ia64 ppc ~ppc64 x86 ~x86-fbsd"
+KEYWORDS="~amd64 ~ia64 ppc ppc64 x86 ~x86-fbsd"
 SLOT="3.3"
 IUSE=""
 
