@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/java-config
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/java-config/ChangeLog,v 1.181 2008/01/31 19:17:31 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/java-config/ChangeLog,v 1.182 2008/02/05 10:04:09 corsair Exp $
+
+  05 Feb 2008; Markus Rothe <corsair@gentoo.org> java-config-2.1.4.ebuild:
+  Stable on ppc64
 
   31 Jan 2008; Christian Faulhammer <opfer@gentoo.org>
   java-config-2.1.4.ebuild:
