@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/java-sdk-docs
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/java-sdk-docs/ChangeLog,v 1.57 2008/01/17 20:07:49 tgall Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/java-sdk-docs/ChangeLog,v 1.58 2008/02/05 10:05:09 corsair Exp $
+
+  05 Feb 2008; Markus Rothe <corsair@gentoo.org>
+  java-sdk-docs-1.6.0-r1.ebuild:
+  Stable on ppc64
 
   17 Jan 2008; Tom Gall <tgall@gentoo.org> java-sdk-docs-1.6.0-r1.ebuild:
   added ~ppc64, bug 166789
