@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/eclipse-ecj
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/eclipse-ecj/ChangeLog,v 1.34 2008/01/24 17:59:38 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/eclipse-ecj/ChangeLog,v 1.35 2008/02/05 10:03:01 corsair Exp $
+
+  05 Feb 2008; Markus Rothe <corsair@gentoo.org>
+  eclipse-ecj-3.3.0-r2.ebuild:
+  Stable on ppc64
 
   24 Jan 2008; nixnut <nixnut@gentoo.org> eclipse-ecj-3.3.0-r2.ebuild:
   Stable on ppc wrt bug 204484
